--- a/java/build.gradle
+++ b/java/build.gradle
@@ -1,3 +1,15 @@
+plugins {
+  id "org.sonarqube" version "4.4.1.3373"
+}
+
+sonar {
+  properties {
+    property "sonar.projectKey", "juanjoseEci_legacy-ferry-booking-system"
+    property "sonar.organization", "juanjoseeci"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
+
 group 'ferry'
 version '1.0-SNAPSHOT'
 
