--- a/java/build.gradle
+++ b/java/build.gradle
@@ -1,13 +1,22 @@
-plugins {
-  id "org.sonarqube" version "4.4.1.3373"
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3"
+    }
 }
 
-sonar {
-  properties {
-    property "sonar.projectKey", "juanjoseEci_Ferry-Legacy"
-    property "sonar.organization", "juanjoseeci"
-    property "sonar.host.url", "https://sonarcloud.io"
-  }
+apply plugin: "org.sonarqube"
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "juanjoseEci_Ferry-Legacy"
+        property "sonar.organization", "juanjoseeci"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
 }
 
 group 'ferry'
@@ -31,4 +40,3 @@ dependencies {
         'junit:junit:4.12'
     )
 }
-
