--- a/java/build.gradle
+++ b/java/build.gradle
@@ -31,12 +31,8 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    compile(
-        'org.json:json:20160212',
-        'commons-io:commons-io:2.4'
-    )
-    testCompile(
-        'junit:junit:4.12'
-    )
+dependencies {dependencies {
+    implementation 'org.json:json:20160212'
+    implementation 'commons-io:commons-io:2.4'
+    testImplementation 'junit:junit:4.12'
 }
